--- a/index.html
+++ b/index.html
@@ -2,14 +2,45 @@
 <html>
 
 <head>
-  <title></title>
+  <title>App Theme</title>
   <meta charset="utf-8">
-
+  <link rel="stylesheet" href="css/flexboxgrid.css">
+  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- Leave this here!  It renders the review buttons  -->
   <script src='./evaluation/init.js'></script>
 </head>
-
 <body>
+  <header id="main-header">
+    <div class="container">
+      <div class="row end-sm end-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
+        <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+          <h1><span class="primary-text">App</span>Theme</h1>
+        </div>
+        <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+          <nav id="navbar">
+            <ul>
+              <li class="current"><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <footer id="main-footer">
+    <div class="container">
+      <div class="row center-xs center-sm center-md center-lg">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <p>Copyright &copy; 2017 | AppTheme</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
