--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="container">
       <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-          <img src="images/iphone.png" alt="">
+          <img src="assets/iphone.png" alt="">
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <h2>Core Features</h2>
