--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,69 @@
         </div>
       </header>
 
+      <section id="subheader">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+              <h1>Contact</h1>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="page" class="contact">
+        <div class="container">
+          <div class="row center-xs center-sm center-md center-lg">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+              <h2><span class="primary-text">Get</span> In Touch</h2>
+              <p>Please use this form to contact us</p>
+              <form>
+                <div>
+                  <label for="name">Name</label><br>
+                  <input type="text" name="name">
+                </div>
+                <div>
+                  <label for="email">Email</label><br>
+                  <input type="text" name="email">
+                </div>
+                <div>
+                  <label for="message">Message</label><br>
+                  <textarea name="message"></textarea>
+                </div>
+                <button type="submit" name="button">Submit</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="company">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <h4>Contact Us</h4>
+              <ul>
+                <li><i class="fa fa-phone"></i> (617) 555-5555</li>
+                <li><i class="fa fa-envelope"></i> support@apptheme.test</li>
+                <li><i class="fa fa-map"></i> 400 Main st, Boston MA</li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <h4>About Us</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <h4>Newsletter</h4>
+              <p>Lorem ipsum dolor sit amet</p>
+              <form>
+                <input type="text" name="email" placeholder="Enter Email">
+                <button type="submit" name="button">Submit</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <footer id="main-footer">
         <div class="container">
           <div class="row center-xs center-sm center-md center-lg">
