--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>AppTheme | Contact</title>
@@ -33,7 +33,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-              <h1>Contact</h1>
+              <h2>Contact</h2>
             </div>
           </div>
         </div>
