--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <title>App Theme</title>
@@ -10,6 +10,7 @@
   <!-- Leave this here!  It renders the review buttons  -->
   <script src='./evaluation/init.js'></script>
 </head>
+
 <body>
   <header id="main-header">
     <div class="container">
@@ -35,7 +36,7 @@
     <div class="container">
       <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
         <div class="col-xs-10 col-sm-10 col-md-10 col-lg-7 showcase-content">
-          <h1>Welcome to <span class="primary-text">AppTheme</span></h1>
+          <h2>Welcome to <span class="primary-text">AppTheme</span></h2>
           <p>A template built with HTML5, CSS3 and Flexboxgrid</p>
         </div>
       </div>
